bg(setup):fix level width (#345)
- truncate child name to a maximum of 14 characters, so as to maintain
uniform width.
 - made use of tooltips to display full length of the child level name.

[fixes #165343977]

--- a/src/assets/styles/buildingSetup.scss
+++ b/src/assets/styles/buildingSetup.scss
@@ -324,8 +324,6 @@ label {
   border-radius: 5px;
   width: 120px;
   color: map-get($color-black, 900);
-  overflow: hidden;
-  text-overflow: ellipsis;
   background: $color-gradient;
   border: 1px solid $color-primary;
   cursor: pointer;
@@ -335,6 +333,10 @@ label {
   min-width: 75px;
   display: inline-grid;
   line-height: 26px;
+}
+
+.long-name {
+  padding: 11px 0px;
 }
 
 .preview-btn {
