--- a/src/assets/styles/previewModal.scss
+++ b/src/assets/styles/previewModal.scss
@@ -31,6 +31,10 @@
   }
 }
 
+a {
+  opacity: 1 !important;
+}
+
 .preview-structure-tree {
   margin: 0 auto;
   width: 95%;
