--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -33,6 +33,7 @@ $color-level-setup-subheading: #6d6d6d;
 $color-setup-main-container: rgba(0, 0, 0, 0.1);
 $color-room-details: rgba(214, 222, 228, 0.5);
 $color-background-hover: rgba(51, 89, 219, 0.06);
+$color-box-shadow-tooltip: rgba(0, 0, 0, 0.1);
 
 $color-header: #787878;
 $color-background: #f5f9fa;
